--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,10 @@
 * @Author: colxi
 * @Date:   2018-01-25 04:18:35
 * @Last Modified by:   colxi
-* @Last Modified time: 2018-02-04 00:38:05
+* @Last Modified time: 2018-02-04 20:23:29
 */
 body{
-	width: intrinsic;           /* Safari/WebKit uses a non-standard name */
-  	width: -moz-max-content;    /* Firefox/Gecko */
-  	width: -webkit-max-content; /* Chrome */
+	min-width: 100%;
 }
 #reload_chrome_ext{
 	top:-50px;
